<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context="in.palerdot.pocketperiodictable.HelpActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="7dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="How-To Guide:"
                    android:textSize="@dimen/help_text_header"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/help_text_1"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/help_text_2"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/help_text_3"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/help_text_4"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="7dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="Feedback:"
                    android:textSize="@dimen/help_text_header"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/help_text_1"
                    android:text="@string/feedback_text"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
